[gd_scene load_steps=25 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_Helpers/OQ_VisibilityToggle.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_Climbing.tscn" type="PackedScene" id=6]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_Stick.tscn" type="PackedScene" id=8]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_Falling.tscn" type="PackedScene" id=9]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_StaticGrab.tscn" type="PackedScene" id=14]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=16]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=17]
[ext_resource path="res://dynamic_objects/ObjectGrabber.tscn" type="PackedScene" id=18]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=20]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_WalkInPlace.tscn" type="PackedScene" id=25]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_ControllerModel_Left.tscn" type="PackedScene" id=27]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_ControllerModel_Right.tscn" type="PackedScene" id=28]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=29]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLogWindow.tscn" type="PackedScene" id=30]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/theme/oq_ui2d_standard.theme" type="Theme" id=35]
[ext_resource path="res://levels/StatisticsWatch.gd" type="Script" id=37]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=38]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=39]
[ext_resource path="res://dynamic_objects/Inventory.tscn" type="PackedScene" id=40]
[ext_resource path="res://dynamic_objects/Toolbelt.tscn" type="PackedScene" id=41]
[ext_resource path="res://ui/GameplaySettings.tscn" type="PackedScene" id=42]
[ext_resource path="res://levels/VoxelWorldPlayer.gd" type="Script" id=43]

[node name="VoxelWorldPlayer" type="Node"]
script = ExtResource( 43 )

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 6 )

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 7 )]
far = 1024.0

[node name="Feature_VRSimulator" parent="OQ_ARVROrigin" instance=ExtResource( 20 )]
walk_speed = 4.0
player_height = 1.7

[node name="Locomotion_WalkInPlace" parent="OQ_ARVROrigin" instance=ExtResource( 25 )]
active_in_desktop = true

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 16 )]
transform = Transform( 0.947606, 0.268777, -0.17263, -0.187511, 0.905535, 0.380586, 0.258615, -0.328276, 0.908489, -0.25, 1.581, -0.566538 )
enable_gesture_to_button = true

[node name="Feature_ControllerModel_Left" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 27 )]

[node name="Feature_StaticGrab" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 14 )]
check_parent_can_static_grab = true

[node name="OQ_VisibilityToggle" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 4 )]
toggle_button = -1
invisible_on_start = true

[node name="OQ_UI2DLogWindow" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle" instance=ExtResource( 30 )]
transform = Transform( -3.93545e-08, -0.393124, 0.919486, 1.90239e-08, 0.919486, 0.393124, -1, 3.29634e-08, -2.87072e-08, -0.346372, 0.164801, -0.0757528 )

[node name="ObjectGrabber" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 18 )]

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 17 )]
ui_raycast_length = 0.2
ui_mesh_length = 0.2
ui_raycast_visible_button = -1

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 29 )]
transform = Transform( 0.915613, -0.241981, 0.321089, 0.337472, 0.896648, -0.286592, -0.218554, 0.370766, 0.902644, 0.134435, 1.5, -0.65661 )
enable_gesture_to_button = true

[node name="Feature_ControllerModel_Right" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 28 )]

[node name="Feature_StaticGrab" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 14 )]
check_parent_can_static_grab = true

[node name="ObjectGrabber" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 18 )]

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 17 )]
ui_raycast_length = 0.2
ui_mesh_length = 0.2
ui_raycast_visible_button = -1

[node name="Feature_Climbing" parent="OQ_ARVROrigin" instance=ExtResource( 6 )]

[node name="Feature_Falling" parent="OQ_ARVROrigin" instance=ExtResource( 9 )]
force_move_up = true
move_up_speed = 16.0
ray_collision_mask = 1
fall_raycast_radius = 0.2
collision_type = 2

[node name="Locomotion_Stick" parent="OQ_ARVROrigin" instance=ExtResource( 8 )]
move_speed = 2.0

[node name="HUD" type="Node" parent="."]

[node name="ArmUserInterface" type="Spatial" parent="HUD"]
transform = Transform( 1, 0, 0, 0, -0.707107, -0.707107, 0, 0.707107, -0.707107, 0, 0, 0 )
script = ExtResource( 37 )

[node name="UITransform" type="Spatial" parent="HUD/ArmUserInterface"]
transform = Transform( 5.76012e-08, 5.76012e-08, -0.5, 0.353553, -0.353553, 0, -0.353553, -0.353553, -8.14603e-08, -0.056, -0.01, 0.02 )

[node name="OQ_UILabel_JogDistance" parent="HUD/ArmUserInterface/UITransform" instance=ExtResource( 39 )]
transform = Transform( 1, 1.69407e-21, -1.42109e-14, 1.69407e-21, 1, -1.42109e-14, 7.10543e-15, 7.10543e-15, 1, 0, 0, 0 )
margin = 16
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 0 )
transparent = true

[node name="OQ_UI2D_GameplaySettings" parent="HUD/ArmUserInterface/UITransform" instance=ExtResource( 38 )]
editor_live_update = false
transparent = true

[node name="GameplaySettings" parent="HUD/ArmUserInterface/UITransform/OQ_UI2D_GameplaySettings" instance=ExtResource( 42 )]

[node name="OQ_UI2D_SwitchPanelUI" parent="HUD/ArmUserInterface" instance=ExtResource( 38 )]
transform = Transform( 5.76012e-08, 5.76012e-08, -0.5, 0.353553, -0.353553, 0, -0.353553, -0.353553, -8.14603e-08, -0.056, 0.125012, -0.0433764 )
editor_live_update = false
transparent = false

[node name="Button_SwitchPanel" type="Button" parent="HUD/ArmUserInterface/OQ_UI2D_SwitchPanelUI"]
margin_right = 48.0
margin_bottom = 48.0
theme = ExtResource( 35 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="." instance=ExtResource( 40 )]

[node name="Toolbelt" parent="." instance=ExtResource( 41 )]
[connection signal="grab_released_held_object" from="OQ_ARVROrigin/OQ_LeftController/ObjectGrabber" to="." method="_on_ObjectGrabber_grab_released_held_object"]
[connection signal="grab_released_held_object" from="OQ_ARVROrigin/OQ_RightController/ObjectGrabber" to="." method="_on_ObjectGrabber_grab_released_held_object"]
